--- a/src/scss/block/dataview/view/gallery.scss
+++ b/src/scss/block/dataview/view/gallery.scss
@@ -10,7 +10,7 @@
 			.cellContent.c-title { @include text-paragraph; margin-bottom: 6px; }
 			.cellContent.c-title {
 				.smile { margin-bottom: 10px; }
-				.name { max-width: 100%; }
+				.name { max-width: 100%; @include text-overflow-nw; }
 			}
 
 			.card { 
