--- a/src/scss/component/cover.scss
+++ b/src/scss/component/cover.scss
@@ -15,7 +15,7 @@
 .cover.type2.blue { background-color: #2869e9; }
 .cover.type2.ice { background-color: #88cdf3; }
 .cover.type2.teal { background-color: #9bb0b7; }
-.cover.type2.green { background-color: #136Ee1; }
+.cover.type2.green { background-color: #136E41; }
 .cover.type2.lightgrey { background-color: $colorLightGrey; }
 .cover.type2.darkgrey { background: $colorDarkGrey; }
 .cover.type2.black { background-color: $colorBlack; }
