--- a/src/scss/page/help.scss
+++ b/src/scss/page/help.scss
@@ -7,5 +7,6 @@
 	.wrapContent { width: 100% !important; }
 	.wrapContent {
 		.icon.help { width: 20px; height: 20px; margin-top: -4px; }
+		.link { white-space: nowrap; cursor: pointer; }
 	}
 }
