--- a/src/scss/page/help.scss
+++ b/src/scss/page/help.scss
@@ -9,4 +9,8 @@
 		.icon.help { width: 20px; height: 20px; margin-top: -4px; }
 		.link { white-space: nowrap; cursor: pointer; }
 	}
+
+	.block.blockDiv { margin: 30px 0px; }
+
+	img.mention { margin-left: -18px; width: 100%; }
 }
