--- a/src/scss/component/icon.scss
+++ b/src/scss/component/icon.scss
@@ -12,7 +12,7 @@
 .icon.search { width: 24px; height: 24px; background-image: url('~img/icon/search.svg'); }
 
 .icon.help { width: 22px; height: 22px; background-image: url('~img/icon/help/dark0.svg'); }
-.icon.help:hover { width: 22px; height: 22px; background-image: url('~img/icon/help/dark1.svg'); }
+.icon.help:hover { background-image: url('~img/icon/help/dark1.svg'); }
 
 .icon.help.light { background-image: url('~img/icon/help/light0.svg'); }
 .icon.help.light:hover { background-image: url('~img/icon/help/light0.svg'); }
