view resizing + readOnly checkbox

--- a/src/scss/block/dataview/view/board.scss
+++ b/src/scss/block/dataview/view/board.scss
@@ -3,7 +3,7 @@
 .blocks {
 	.block.blockDataview {
 
-        .view.viewBoard {
+        .viewItem.viewBoard {
             .columns { display: flex; }
             .column { width: 240px; margin-right: 24px; }
             .column {
