--- a/src/scss/block/dataview/view/list.scss
+++ b/src/scss/block/dataview/view/list.scss
@@ -2,8 +2,8 @@
 
 .blocks {
 	.block.blockDataview {
-        .view.viewList { padding: 20px 0px 0px 0px; }
-		.view.viewList {
+        .viewItem.viewList { padding: 20px 0px 0px 0px; }
+		.viewItem.viewList {
 		    .item { width: 100%; display: inline-block; margin-bottom: 8px; }
 			.item:last-child { margin: 0px; }
 
