--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -6,7 +6,7 @@
 		.icon.plus { width: 20px; height: 20px; background-image: url('~img/icon/dataview/button/plus0.svg'); cursor: pointer; }
 		.icon.plus:hover { background-image: url('~img/icon/dataview/button/plus1.svg'); }
 		
-		.icon.checkbox { background-image: url('~img/icon/dataview/checkbox0.svg'); }
+		.icon.checkbox { background-image: url('~img/icon/dataview/checkbox0.svg'); cursor: default; }
 		.icon.checkbox.active { background-image: url('~img/icon/dataview/checkbox1.svg'); }
 		
 		.icon.expand { display: none; width: 20px; height: 20px; background-image: url('~img/icon/dataview/button/expand0.svg'); cursor: pointer; }
@@ -84,7 +84,7 @@
 				.icon.user { margin-right: 5px; }
 			}
 			
-			.cell.c-checkbox { cursor: pointer; }
+			.cell.canEdit.c-checkbox { cursor: pointer; }
 			
 			.cell.c-url, .cell.c-email, .cell.c-phone {
 				a { text-decoration: none; border-bottom: 1px solid #d2d0c2; transition: $transitionFast; cursor: pointer; }
