--- a/src/scss/block/dataview/view/gallery.scss
+++ b/src/scss/block/dataview/view/gallery.scss
@@ -2,8 +2,8 @@
 
 .blocks {
 	.block.blockDataview {
-		.view.viewGallery { padding: 16px 0px; display: flex; flex-wrap: wrap; column-count: 4; }
-		.view.viewGallery {
+		.viewItem.viewGallery { padding: 16px 0px; display: flex; flex-wrap: wrap; column-count: 4; }
+		.viewItem.viewGallery {
 			.cellContent:last-child { margin: 0px; }
 			.cellContent.c-date { color: #6c6a5f; }
 
