--- a/src/scss/component/editor.scss
+++ b/src/scss/component/editor.scss
@@ -101,7 +101,7 @@
 
 				.icon.nav { background-image: url('~img/icon/nav1.svg'); }
 		
-				img { width: 100%; }
+				img.full { width: 100%; }
 				img.mention { margin-left: -18px; }
 			}
 		}
