--- a/src/scss/block/dataview/view/gallery.scss
+++ b/src/scss/block/dataview/view/gallery.scss
@@ -10,7 +10,11 @@
 			.cellContent.c-title { @include text-paragraph; margin-bottom: 6px; }
 			.cellContent.c-title {
 				.smile { margin-bottom: 10px; }
-				.name { max-width: 100%; @include text-overflow-nw; height: 24px; }
+				.name { height: 24px; }
+			}
+
+			.cellContent {
+				.name { max-width: 100%; @include text-overflow-nw; }
 			}
 
 			.card { 
