--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -31,7 +31,7 @@
 			}
 			td.cell.isName {
 				.icon.expand { display: block; position: absolute; right: 14px; top: 14px; opacity: 0; }
-				.name { line-height: 20px; width: calc(100% - 48px); }
+				.name { line-height: 20px; width: calc(100% - 48px); white-space: nowrap; }
 			}
 
             td.cell.isEditing { box-shadow: 0px 0px 0px 2px $colorOrange inset; border-radius: 2px; }
