--- a/src/scss/component/cover.scss
+++ b/src/scss/component/cover.scss
@@ -8,7 +8,7 @@
 .cover.type2.white { background-color: #fff; }
 .cover.type2.yellow { background-color: #fee874; }
 .cover.type2.orange { background-color: #ffb522; }
-.cover.type2.red { background-color: #f5552222; }
+.cover.type2.red { background-color: #f55522; }
 .cover.type2.pink { background-color: #efaea1; }
 .cover.type2.purple { background-color: #6a1036; }
 .cover.type2.navy { background-color: #132877; }
