--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -85,7 +85,7 @@
 			}
 
 			.cell.c-multiselect {
-				.tag { margin: 0px 6px 6px 0px; }
+				.tagItem { margin: 0px 6px 6px 0px; }
 			}
 			
 			.cell.c-link {
