--- a/src/scss/block/text.scss
+++ b/src/scss/block/text.scss
@@ -105,7 +105,7 @@
 	.block.blockText.code > .wrapContent > .selectable > .dropTarget { padding: 41px 16px 16px 16px; background: rgba(247,245,240,0.5); }
 	.block.blockText.code > .wrapContent > .selectable > .dropTarget > .flex { position: static; } 
 	.block.blockText.code {
-		.value { font-family: 'Plex'; @include text-common; }
+		.value { font-family: 'Plex'; @include text-common; tab-size: 4; }
 		.select { 
 			position: absolute; top: 9px; left: 16px; z-index: 1; border: 0px;  color: $colorDarkGrey; @include text-common; 
 			border-radius: 0px;
