--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -1,10 +1,9 @@
 @import "~scss/_vars";
 
 .popups {
-	.popup.popupNavigation { width: 368px; margin: 0px 0px 0px -184px; }
-	.popup.popupNavigation.expanded { width: 1136px; margin: 0px 0px 0px -578px; }
-	
 	.popup.popupNavigation {
+		.inner { width: 368px; margin: 0px 0px 0px -184px; }
+
 		.head { padding: 16px; border-bottom: 1px solid #ebe9e0; }
 		.head {
 			.icon.search { margin-right: 8px; vertical-align: top; }
@@ -77,6 +76,8 @@
 	}
 	
 	.popup.popupNavigation.expanded {
+		.inner { width: 1136px; margin: 0px 0px 0px -578px; }
+		
 		.head { padding: 10px 12px 16px 12px; border: 0px; }
 		.sides { display: flex; padding: 16px; }
 		
