--- a/src/scss/popup/archive.scss
+++ b/src/scss/popup/archive.scss
@@ -1,9 +1,9 @@
 @import "~scss/_vars";
 
 .popups {
-	.popupArchive { width: 672px; padding: 48px; }
 	.popupArchive {
-	
+		.inner { width: 672px; padding: 48px; }
+
 		.head { padding-bottom: 10px; border-bottom: 1px solid #eae9e0; }
 		.head {
 			.title { font-size: 28px; line-height: 32px; letter-spacing: -0.36px; margin-bottom: 10px; }
