--- a/src/scss/popup/new.scss
+++ b/src/scss/popup/new.scss
@@ -1,8 +1,9 @@
 @import "~scss/_vars";
 
 .popups {
-	.popup.popupNew { width: 864px; padding: 80px 0px 0px 0px; }
 	.popup.popupNew {
+		.inner { width: 864px; padding: 80px 0px 0px 0px; }
+
 		.head { display: flex; position: absolute; top: 0px; left: 0px; width: 100%; padding: 10px 20px; color: $colorDarkGrey; }
 		.head {
 			.side { width: 50%; }
