--- a/src/scss/popup/preview.scss
+++ b/src/scss/popup/preview.scss
@@ -1,9 +1,10 @@
 @import "~scss/_vars";
 
 .popups {
-	.popup.popupPreview { padding: 10px; min-width: 50px; min-height: 50px; margin: -25px 0px 0px -25px; }
+	.popup.popupPreview {  }
 	.popup.popupPreview {
-		.inner { width: 100%; height: 100%; overflow-x: hidden; overflow-y: auto; }
-		#content { border-radius: 4px; display: block; }
+		.inner { padding: 10px; min-width: 50px; min-height: 50px; margin: -25px 0px 0px -25px; }
+		.wrap { width: 100%; height: 100%; overflow-x: hidden; overflow-y: auto; }
+		.content { border-radius: 4px; display: block; }
 	}
 }
