--- a/src/scss/popup/archive.scss
+++ b/src/scss/popup/archive.scss
@@ -2,7 +2,7 @@
 
 .popups {
 	.popupArchive {
-		.inner { width: 672px; padding: 48px; }
+		.innerWrap { width: 672px; padding: 48px; }
 
 		.head { padding-bottom: 10px; border-bottom: 1px solid #eae9e0; }
 		.head {
