--- a/src/scss/popup/editor/page.scss
+++ b/src/scss/popup/editor/page.scss
@@ -2,7 +2,7 @@
 
 .popups {
 	.popup.popupEditorPage {
-		.inner { width: 800px; height: calc(100% - 20px); padding: 40px 0px; }
+		.innerWrap { width: 800px; height: calc(100% - 20px); padding: 40px 0px; }
 		
 		.header { position: relative; padding: 0px; }
 		.header {
