--- a/src/scss/popup/feedback.scss
+++ b/src/scss/popup/feedback.scss
@@ -2,7 +2,7 @@
 
 .popups {
 	.popup.popupFeedback {
-		.inner { width: 672px; }
+		.innerWrap { width: 672px; }
 
 		.wrapper { padding: 48px; }
 	
