--- a/src/scss/popup/settings.scss
+++ b/src/scss/popup/settings.scss
@@ -2,7 +2,7 @@
 
 .popups {
 	.popupSettings {
-		.inner { width: 672px; }
+		.innerWrap { width: 672px; }
 		.content { height: 100%; }
 	
 		.icon { transition: none; }
