--- a/src/scss/popup/common.scss
+++ b/src/scss/popup/common.scss
@@ -3,12 +3,12 @@
 .popups {
 	.popup { position: fixed; left: 0px; top: 0px; width: 100%; height: 100%; z-index: 100; }
 	.popup.show {
-		.inner { opacity: 1; transform: scale3d(1,1,1); }
+		.innerWrap { opacity: 1; transform: scale3d(1,1,1); }
 		.dimmer { opacity: 1; }
 	}
 	
 	.popup {
-		.inner { 
+		.innerWrap { 
 			position: absolute; left: 50%; top: 50%; z-index: 1; background: #fff; border-radius: 12px; box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.35);
 			opacity: 0; transform: scale3d(0.8,0.8,1); transition: opacity 0.05s ease-in-out, transform 0.05s ease-in-out; 
 		}
