--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -2,7 +2,7 @@
 
 .popups {
 	.popup.popupNavigation {
-		.inner { width: 368px; margin: 0px 0px 0px -184px; }
+		.innerWrap { width: 368px; margin: 0px 0px 0px -184px; }
 
 		.head { padding: 16px; border-bottom: 1px solid #ebe9e0; }
 		.head {
@@ -73,40 +73,39 @@
 			}
 			.item.empty:hover { box-shadow: 0px 0px 0px 1px $colorLightGrey inset; }
 		}
-	}
-	
-	.popup.popupNavigation.expanded {
-		.inner { width: 1136px; margin: 0px 0px 0px -578px; }
-		
-		.head { padding: 10px 12px 16px 12px; border: 0px; }
-		.sides { display: flex; padding: 16px; }
-		
-		.items { width: 33.33%; }
-		.items {
-			.item { padding-right: 16px; }
-			.item {
-				.info { border: 0px; }
-				.icon.arrow { opacity: 1; right: -28px; }
-				.line { opacity: 0 !important; }
+
+		.innerWrap.expanded { width: 1136px; margin: 0px 0px 0px -578px; }
+		.innerWrap.expanded {
+			.head { padding: 10px 12px 16px 12px; border: 0px; }
+			.sides { display: flex; padding: 16px; }
+			
+			.items { width: 33.33%; }
+			.items {
+				.item { padding-right: 16px; }
+				.item {
+					.info { border: 0px; }
+					.icon.arrow { opacity: 1; right: -28px; }
+					.line { opacity: 0 !important; }
+				}
 			}
-		}
-		
-		.selected { padding: 16px 16px 12px 16px; border: 1px solid #ffda90; box-shadow: 0px 0px 0px 1px #ffda90; border-radius: 8px; }
-		.selected {
-			.smile { margin-bottom: 8px; }
-			.name { margin-bottom: 1px; @include text-overflow-nw; height: 22px; }
-			.descr { @include text-small; color: #6c6a5f; @include text-overflow; max-height: 54px; }
-			.cover { position: static; height: 156px; margin-top: 11px; }
-			.buttons { margin-top: 16px; display: flex; }
-			.buttons {
-				.button { margin-right: 12px; width: 50%; height: 32px; line-height: 30px; font-weight: 400; }
-				.button:last-child { margin: 0px; }
+			
+			.selected { padding: 16px 16px 12px 16px; border: 1px solid #ffda90; box-shadow: 0px 0px 0px 1px #ffda90; border-radius: 8px; }
+			.selected {
+				.smile { margin-bottom: 8px; }
+				.name { margin-bottom: 1px; @include text-overflow-nw; height: 22px; }
+				.descr { @include text-small; color: #6c6a5f; @include text-overflow; max-height: 54px; }
+				.cover { position: static; height: 156px; margin-top: 11px; }
+				.buttons { margin-top: 16px; display: flex; }
+				.buttons {
+					.button { margin-right: 12px; width: 50%; height: 32px; line-height: 30px; font-weight: 400; }
+					.button:last-child { margin: 0px; }
+				}
 			}
-		}
-		
-		.items.right {
-			.item {
-				.icon.arrow { opacity: 1; right: auto; left: -28px; }
+			
+			.items.right {
+				.item {
+					.icon.arrow { opacity: 1; right: auto; left: -28px; }
+				}
 			}
 		}
 	}
