--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -20,8 +20,15 @@
 			}
 			.head.add { width: 44px; }
 				
-			td.cell { padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; }
+			td.cell { 
+				padding: 14px; border-bottom: 1px solid #e0ded2; vertical-align: top; position: relative; word-break: break-word; 
+				width: 192px;
+			}
 			td.cell:last-child { border-right: 0px; }
+
+			td.cell.c-number {
+				.name { @include text-overflow-nw; max-width: 192px; }
+			}
 
 			td.cell.add { color: $colorDarkGrey; transition: $transitionFast; cursor: pointer; line-height: 20px; }
 			td.cell.add {
@@ -32,6 +39,7 @@
 			td.cell.add:hover {
 				.icon.plus { background-image: url('~img/icon/dataview/button/plus1.svg'); }
 			}
+			td.cell.isName { width: 288px; }
 			td.cell.isName {
 				.icon.expand { display: block; position: absolute; right: 14px; top: 14px; opacity: 0; }
 				.name { line-height: 20px; width: calc(100% - 48px); white-space: nowrap; }
