--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -14,6 +14,8 @@
 			.select { flex-shrink: 0; width: 100px; }
 			.select.operator { width: auto; }
 			.select.operator .name { overflow: visible; }
+
+			.where { height: 28px; line-height: 28px; margin-right: 8px; display: inline-block; vertical-align: middle; }
 		}
 
 		.item.add { display: block; }
