--- a/src/scss/block/dataview/view/grid.scss
+++ b/src/scss/block/dataview/view/grid.scss
@@ -41,7 +41,10 @@
 			}
 			td.cell.isName { width: 288px; }
 			td.cell.isName {
-				.icon.expand { display: block; position: absolute; right: 14px; top: 14px; opacity: 0; }
+				.icon.expand { 
+					display: block; position: absolute; right: 0px; top: 0px; opacity: 0; width: 38px; height: 100%;
+					background-size: 20px 20px; background-position: 9px center;
+				}
 				.name { line-height: 20px; width: calc(100% - 48px); white-space: nowrap; }
 			}
 
