--- a/src/scss/component/select.scss
+++ b/src/scss/component/select.scss
@@ -14,9 +14,9 @@
 		background-image: url('~img/arrow/select/dark.svg'); 
 	}
 	.icon.arrow.light { background-image: url('~img/arrow/select/light.svg'); }
-	.current { padding: 4px 26px 4px 6px; }
+	.current { padding: 3px 26px 3px 6px; width: 100%; line-height: 20px; }
 	.current {
-		.name { @include text-overflow-nw; width: calc(100% - 14px); }
+		.name { @include text-overflow-nw; }
 	}
 	.options { 
 		min-width: 176px; border-radius: 8px; box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.3); background: #fff; position: absolute;
