--- a/src/scss/block/dataview.scss
+++ b/src/scss/block/dataview.scss
@@ -73,7 +73,7 @@
 		}
 		
 		.content {
-			.wrap { overflow-x: auto; overflow-y: visible; }
+			.scroll { overflow-x: auto; overflow-y: visible; }
 			.view { border-top: 1px solid #e0ded2; }
 			
 			.card { min-height: 112px; border: 1px solid $colorLightGrey; border-radius: 12px; padding: 16px; }
