--- a/src/scss/component/pager.scss
+++ b/src/scss/component/pager.scss
@@ -1,15 +1,19 @@
 @import "~scss/_vars";
 
 .pager { 
-    text-align: right; margin: 10px 0px 0px 0px; color: $colorDarkGrey; cursor: pointer; white-space: nowrap; @include text-small;
+    text-align: center; margin: 13px 0px 0px 0px; color: $colorDarkGrey; cursor: pointer; white-space: nowrap; @include text-common;
 }
 
 .pager {
     .page { 
-        min-width: 20px; height: 20px; border-radius: 4px; display: inline-block; padding: 0px 2px; transition: $transitionFast;
-        text-align: center; line-height: 20px; margin-right: 2px;
+        min-width: 24px; display: inline-block; padding: 0px 2px; transition: $transitionFast; text-align: center; margin-right: 8px; 
+        vertical-align: top; line-height: 24px;
     }
     .page:last-child { margin: 0px; }
-    .page:hover { color: #000; background: #ebe9e0; }
-    .page.active { color: #000; background: $colorOrange; }
+    .page:hover, .page.active { color: $colorBlack; }
+
+    .icon.arrow { width: 24px; height: 24px; vertical-align: top; background-image: url('~img/arrow/pager0.svg'); }
+    .icon.arrow:hover { background-image: url('~img/arrow/pager1.svg'); }
+
+    .icon.arrow.right { transform: rotateZ(180deg); }
 }
