filter menu fixes

--- a/src/scss/menu/dataview/filter.scss
+++ b/src/scss/menu/dataview/filter.scss
@@ -15,7 +15,7 @@
 			.select.operator { width: auto; }
 			.select.operator .name { overflow: visible; }
 
-			.where { height: 28px; line-height: 28px; margin-right: 8px; display: inline-block; vertical-align: top; }
+			.txt { height: 28px; line-height: 28px; margin-right: 8px; display: inline-block; vertical-align: top; }
 		}
 
 		.item.add { display: block; }
