--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -3,7 +3,7 @@
 .popups {
 	.popup.popupNavigation {
 		.content { overflow: visible; }
-		.innerWrap { width: 400px; margin: 0px 0px 0px -200px; top: 38px; }
+		.innerWrap { width: 400px; margin: 0px 0px 0px -200px; top: 38px; transform: scale3d(1,1,1); }
 
 		.head { 
 			height: 28px; position: fixed; top: -33px; left: 50%; background: #fff; width: 400px; border-radius: 6px;
