--- a/src/scss/component/header.scss
+++ b/src/scss/component/header.scss
@@ -29,6 +29,11 @@
 		}
 		.item:hover { color: $colorBlack; }
 	}
+
+	.menu { position: absolute; top: 9px; right: 10px; }
+	.menu {
+		.icon:last-child { margin: 0px; }
+	}
 	
 	.icon.home { background-image: url('~img/icon/header/home0.svg'); }
 	.icon.home:hover { background-image: url('~img/icon/header/home1.svg'); }
@@ -39,20 +44,14 @@
 	.icon.forward { background-image: url('~img/icon/header/back0.svg'); }
 	.icon.forward:hover { background-image: url('~img/icon/header/back1.svg'); }
 
-	.icon.plus { background-size: 30px 16px !important; background-image: url('~img/icon/header/plus0.svg'); }
+	.icon.plus { background-size: 16px 16px !important; background-image: url('~img/icon/header/plus0.svg'); }
 	.icon.plus:hover { background-image: url('~img/icon/header/plus1.svg'); }
+
+	.icon.more { background-image: url('~img/icon/menu/action/more0.svg'); }
+	.icon.more:hover { background-image: url('~img/icon/menu/action/more1.svg'); }
 }
 
 .headerMainEdit { background: #fff; padding: 9px 10px 9px 82px; line-height: 20px; }
-.headerMainEdit {
-	.menu { position: absolute; top: 9px; right: 10px; }
-	.menu {
-		.icon.more { width: 20px; height: 20px; background-image: url('~img/icon/menu/action/more0.svg'); cursor: pointer; }
-		.icon.more:hover { background-image: url('~img/icon/menu/action/more1.svg'); }
-
-		.icon:last-child { margin: 0px; }
-	}
-}
 
 .headerMainEditSearch { background: #fff; padding: 5px 10px; height: 38px; }
 .headerMainEditSearch {
