--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -73,7 +73,8 @@
 		.innerWrap.expanded {
 			.sides { display: flex; padding: 16px; }
 			
-			.items { width: 33.33%; }
+			.items { width: 33.33%; padding: 4px 16px; }
+			.items.center { padding-top: 39px; }
 			.items {
 				.item { padding-right: 16px; height: 80px; border: 1px solid $colorLightGrey; border-radius: 8px; }
 				.item {
@@ -92,6 +93,8 @@
 					.icon.arrow { background-image: url('~img/arrow/nav1.svg'); }
 				}
 			}
+
+			.sideName { margin-bottom: 13px; @include text-common; font-weight: 500; }
 			
 			.selected { padding: 16px 16px 12px 16px; border: 1px solid #ffda90; box-shadow: 0px 0px 0px 1px #ffda90; border-radius: 8px; }
 			.selected {
@@ -101,8 +104,10 @@
 				.cover { position: static; height: 156px; margin-top: 11px; }
 				.buttons { margin-top: 16px; display: flex; }
 				.buttons {
-					.button { margin-right: 12px; width: 50%; height: 32px; line-height: 30px; font-weight: 400; }
-					.button:last-child { margin: 0px; }
+					.button { width: 100%; height: 32px; line-height: 30px; }
+					.button {
+						.icon.expand { background-image: url('~img/icon/expand.svg'); width: 20px; height: 20px; position: absolute; left: 8px; top: 6px; }
+					}
 				}
 			}
 			
