--- a/src/scss/popup/navigation.scss
+++ b/src/scss/popup/navigation.scss
@@ -49,7 +49,7 @@
 		.items { padding: 12px 0px; overflow-x: hidden; overflow-y: auto; }
 		.items {
 			.item { 
-				margin-bottom: 16px; cursor: pointer; transition: $transitionFast; position: relative; height: 64px; 
+				cursor: pointer; transition: $transitionFast; position: relative; height: 64px; 
 				line-height: 48px; padding: 8px 16px; 
 			}
 			
